--- a/P4/projecttemplate.rmd
+++ b/P4/projecttemplate.rmd
@@ -33,7 +33,7 @@ ds <- subset(ds, select=c(AnoCalendario, DataArquivamento, DataAbertura, UF,
                           Atendida, DescricaoProblema, SexoConsumidor,
                           FaixaEtariaConsumidor))
 
-# renaming
+# renaming columns
 names(ds) <- c('year', 'closingDate', 'registerDate', 'state', 'companyName',
                'type', 'resolved', 'issue', 'gender', 'age')
 
@@ -128,33 +128,36 @@ kable(head(issueFrequency, 10))
 ```{r echo=FALSE}
 top_companies <- count(ds, companyName)
 top_companies <- arrange(top_companies, desc(n))
-top_companies <- top_companies[1:100, ]
 kable(head(top_companies, 10))
 ```
 
 # Univariate Plots Section
 
 ```{r echo=FALSE}
+# calculate the frequency table for the resolved feature
 resolved <- ds %>%
   group_by(resolved) %>%
   summarise (n = n()) %>%
   mutate(freq = n / sum(n))
 
 resolutionRate <- as.double(resolved[2, 'freq'])
+pct <- paste(round(resolved$freq * 100), '%', sep = '')
 
-pct <- paste(round(resolved$freq*100), '%', sep = '')
 pie(resolved$freq, paste(resolved$resolved, pct, sep = ' - '))
 ```
 
 The resolution rate is about 65%.
 
 ```{r echo=FALSE}
+# calculate the frequency table for the gender feature
 gender <- ds %>%
   group_by(gender) %>%
   summarise (n = n()) %>%
   mutate(freq = n / sum(n))
 
-pct <- paste(round(gender$freq*100), '%', sep='')
+man_rate = as.double(gender[2, 'freq'])
+  
+pct <- paste(round(gender$freq * 100), '%', sep = '')
 pie(gender$freq, paste(gender$gender, pct, sep = ' - '))
 ```
 
@@ -164,7 +167,7 @@ pie(gender$freq, paste(gender$gender, pct, sep = ' - '))
 qplot(x = ds$state, data = ds)
 ```
 
-The state with most complaints is São Paulo.
+The state with most complaints is São Paulo (SP).
 
 ```{r echo=FALSE}
 qplot(x = ds$age, data = ds)
@@ -174,11 +177,22 @@ Most complaints are made by people between 31 and 40 years old.
 
 ```{r echo=FALSE, warning=FALSE}
 ggplot(aes(x = elapsedDays), data = ds) +
-  geom_histogram(binwidth = 5) +
-  scale_x_continuous(limits = c(0, 500), breaks = seq(0, 500, 20))
+  geom_histogram(binwidth = 40)
 ```
 
 The number of days to close an issue has a long tail.
+
+```{r echo=FALSE, warning=FALSE}
+ggplot(aes(x = '', y = elapsedDays), data = ds) +
+  geom_boxplot() 
+```
+
+The number of days to close an issue has many outliers (11%).
+
+```{r echo=FALSE, warning=FALSE}
+boxplot_stats <- boxplot.stats(ds$elapsedDays)
+length(boxplot_stats['out'][[1]]) / boxplot_stats['n'][[1]]
+```
 
 # Univariate Analysis
 
@@ -216,12 +230,13 @@ I did some basic data wrangling in the company name so it can be counted correct
 
 ```{r echo=FALSE, Bivariate_Plots}
 
+# calculate the frequency table for the gender / resolved features
 gender_resolved <- ds %>%
   group_by(gender, resolved) %>%
   summarise (n = n()) %>%
   mutate(freq = n / sum(n))
 
-ggplot(gender_resolved, aes(x=gender,y=freq,fill=factor(resolved)))+
+ggplot(gender_resolved, aes(x = gender, y = freq, fill = factor(resolved))) +
   geom_bar(stat="identity") +
   geom_hline(yintercept = resolutionRate)
 ```
@@ -230,14 +245,14 @@ Men and women have practically the same chance to have their issues resolved.
 
 ```{r echo=FALSE}
 
+# calculate the frequency table for the state / resolved features
 state_resolved <- ds %>%
   group_by(state, resolved) %>%
   summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(freq)
+  mutate(freq = n / sum(n))
 
-ggplot(state_resolved, aes(x=state, y=freq, fill=factor(resolved))) +
-  geom_bar(stat="identity") +
+ggplot(state_resolved, aes(x = state, y = freq, fill = factor(resolved))) +
+  geom_bar(stat = "identity") +
   geom_hline(yintercept = resolutionRate)
 ```
 
@@ -245,27 +260,30 @@ Consumers in some states have a much higher chance to resolve their issues.
 
 ```{r echo=FALSE}
 
+# calculate the frequency table for the age / resolved features
 age_resolved <- ds %>%
   group_by(age, resolved) %>%
   summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(freq)
+  mutate(freq = n / sum(n))
 
-ggplot(age_resolved, aes(x=age, y=freq, fill=factor(resolved))) +
-  geom_bar(stat="identity") +
+ggplot(age_resolved, aes(x = age, y = freq, fill = factor(resolved))) +
+  geom_bar(stat = "identity") +
   geom_hline(yintercept = resolutionRate)
 ```
 
-All age intervals have practically the same resolution rate.
-When the age is not informed, the resolution rate is smaller.
+All age ranges have practically the same resolution rate around 65%, with a
+small advantage to under 20 (68%) and over 70 (67%). When the age is not informed,
+the resolution rate is smaller (~61%).
 
 ```{r echo=FALSE}
 
+# calculate the resolution rate per company spreading the resolved
+# feature into columns (N and Y)
 company_resolved <- ds %>%
   group_by(companyName, resolved) %>%
   summarise (n = n()) %>%
-  spread(resolved, n, fill=0) %>%
-  arrange(desc(N+Y)) %>%
+  spread(resolved, n, fill = 0) %>%
+  arrange(desc(N + Y)) %>%
   mutate(freq = Y / (N+Y))
 
 kable(head(company_resolved, 10))
@@ -275,8 +293,8 @@ Resolution rate for the top 10 most frequent companies. OI S/A is the company
 with most complaints but also has a very high resolution rate.
 
 ```{r echo=FALSE, warning=FALSE}
-ggplot(ds, aes(x = elapsedDays, color=resolved)) +  
-  geom_freqpoly(binwidth=10) +
+ggplot(ds, aes(x = elapsedDays, color = resolved)) +  
+  geom_freqpoly(binwidth = 10) +
   scale_x_continuous(limits = c(0, 500), breaks = seq(0, 500, 20))
 ```
 
@@ -284,26 +302,50 @@ The shape of the distribution of the number of days to close an issue doesn't
 change if the issue was resolved or not.
 
 ```{r echo=FALSE, warning=FALSE}
-ggplot(ds, aes(x = elapsedDays, color=resolved)) +  
+
+# create a new categorical variable: elapsed days intervals
+ds$elapsedDaysIntervals <- cut( ds$elapsedDays, 
+                                breaks = c(0, 25, 64, 10^4),
+                                include.lowest = TRUE)
+
+# calculate the frequency table for the elapsed days intervals
+elapseDaysIntervals_resolved <- ds %>%
+  group_by(elapsedDaysIntervals, resolved) %>%
+  summarise (n = n()) %>%
+  mutate(freq = n / sum(n)) %>%
+  arrange(desc(resolved), elapsedDaysIntervals)
+
+ggplot(ds, aes(x = elapsedDays, color = resolved)) +  
   geom_density() +
   scale_x_continuous(limits = c(0, 200), breaks = seq(0, 200, 25))
 ```
 
 The issue has a better chance to be resolved between 25 and 60 days after its
-registration date.
+registration date. The resolution rate in this interval is 70%.
+
+```{r echo=FALSE, warning=FALSE}
+ggplot(aes(x = resolved, y = elapsedDays), data = ds) +
+  geom_boxplot() +
+  coord_cartesian(ylim = c(0, 500))
+```
+
+Resolved issues are closed more quickly than unresolved issues. The resolved issues
+have a median of 75 days versus 93 days of unresolved issues.
+
+```{r echo=FALSE, warning=FALSE}
+by(ds$elapsedDays, ds$resolved, summary)
+```
 
 ```{r echo=FALSE}
 
+# calculate the frequency table for the state / gender features
 state_gender <- ds %>%
   group_by(state, gender) %>%
   summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(freq)
+  mutate(freq = n / sum(n))
 
-man_rate = as.double(gender[2, 'freq'])
-
-ggplot(state_gender, aes(x=state, y=freq, fill=factor(gender))) +
-  geom_bar(stat="identity") +
+ggplot(state_gender, aes(x = state, y = freq, fill = factor(gender))) +
+  geom_bar(stat = "identity") +
   geom_hline(yintercept = man_rate)
 ```
 
@@ -311,41 +353,20 @@ Women and men complaints per state are uniformly distributed.
 
 ```{r echo=FALSE}
 
-state_resolved_elapsedays <- ds %>%
-  group_by(state, resolved) %>%
-  summarise(median = median(elapsedDays))
-
-ggplot(state_resolved_elapsedays, aes(x=state, y=median)) +
-  geom_bar(aes(fill = resolved), position = "dodge", stat="identity")
-```
-
-Some states (e.g. AP, PB and TO) have a huge difference between 
-the median time to close an issue when it was resolved or not.
-
-```{r echo=FALSE}
-
-ggplot(subset(state_resolved_elapsedays, (resolved == 'Y')), aes(x=state, y=median)) +
-  geom_bar(aes(fill = resolved), position = "dodge", stat="identity")
-```
-
-Observing only resolved issues, we can have a better sense of the median time 
-to resolve an issue on different states.
-
-```{r echo=FALSE}
-
+# calculate the frequency table for the age / gender features
 age_gender <- ds %>%
   group_by(age, gender) %>%
   summarise (n = n()) %>%
   mutate(freq = n / sum(n)) %>%
   arrange(freq)
 
-ggplot(age_gender, aes(x=age, y=freq, fill=factor(gender))) +
-  geom_bar(stat="identity") +
+ggplot(age_gender, aes(x = age, y = freq, fill = factor(gender))) +
+  geom_bar(stat = "identity") +
   geom_hline(yintercept = man_rate)
 ```
 
 Women and men complaints per age interval are uniformly distributed.
-Men do not inform their age more frequently than women.
+Men do not inform their age more frequently than women (52% vs 48%).
 
 # Bivariate Analysis
 
@@ -366,6 +387,65 @@ The median time to resolve an issue varies a lot state by state.
 The state where the complaint was filed has a strong impact on the resolution
 rate.
 
+# Multivariate Plots Section
+
+```{r echo=FALSE}
+
+# calculate the median elapsed days per state and resolved features
+state_resolved_elapsedays <- ds %>%
+  group_by(state, resolved) %>%
+  summarise(median = median(elapsedDays))
+
+ggplot(state_resolved_elapsedays, aes(x = state, y = median)) +
+  geom_bar(aes(fill = resolved), position = "dodge", stat = "identity")
+```
+
+The median time to close an issue in some states (e.g. AP, PB and TO)
+have a huge difference when the issue was resolved or not.
+
+```{r echo=FALSE}
+
+# subseting to consider only resolved issues
+state_resolved_elapsedays <- subset(state_resolved_elapsedays, (resolved == 'Y'))
+
+ggplot(state_resolved_elapsedays, aes(x = state, y = median)) +
+  geom_bar(aes(fill = resolved), position = "dodge", stat = "identity")
+```
+
+Observing only resolved issues, we can have a better sense of the median time 
+to resolve an issue on different states. Some states have much worse median time
+than others.
+
+```{r echo=FALSE, warning=FALSE, message=FALSE}
+
+# joining the frequency table of states/resolved with the median elapsed days
+state_resolved <- subset(state_resolved, (resolved == 'Y'))
+state_resolvedrate_elapsedays <- state_resolved_elapsedays %>%
+  left_join(state_resolved)
+
+ggplot(state_resolvedrate_elapsedays, aes(x = freq, y = median, label = state)) +
+  geom_text(check_overlap = TRUE) 
+```
+
+This plot compares the resolution rate and the median time to resolve an issue
+for each state.
+
+# Multivariate Analysis
+
+### Talk about some of the relationships you observed in this part of the \
+investigation. Were there features that strengthened each other in terms of \
+looking at your feature(s) of interest?
+
+The median time to resolve an issue doesn't have a direct correlation with the
+resolution rate. Some states are fast to resolve an issue but have a small 
+resolution rate (e.g. PR). Other states are fast and have a high resolution rate
+(e.g. PB). Some states are slow and have a small resolution rate (e.g. DF).
+
+### Were there any interesting or surprising interactions between features?
+
+Some states have a huge difference between the elapsed time of resolved and 
+not resolved issues.
+
 ------
 
 # Final Plots and Summary
@@ -373,22 +453,21 @@ rate.
 ### Resolution rate per state
 ```{r echo=FALSE, Plot_One}
 
-state_resolved <- subset(state_resolved, (resolved == 'Y'))
-
+# sorting the state levels by the resolution rate
 state_resolved$state <- factor(state_resolved$state,
                           levels(reorder(state_resolved$state, state_resolved$freq)))
 
 breaks = c(resolutionRate, seq(0, 1, 0.25), max(state_resolved$freq))
 
-ggplot(state_resolved, aes(x=state, y=freq)) +
-  geom_bar(stat="identity", fill='#00BFC4') +
+ggplot(state_resolved, aes(x = state, y = freq)) +
+  geom_bar(stat = "identity", fill = '#00BFC4') +
   annotate("text", x = 3.1, y = resolutionRate + 0.03, label = "Avg. resolution rate") +
-  geom_hline(yintercept = resolutionRate, linetype="dashed") +
+  geom_hline(yintercept = resolutionRate, linetype = "dashed") +
   scale_y_continuous(labels = scales::percent, breaks = breaks) +
-  xlab('State') + 
+  xlab('State') +
   ylab('Resolution rate') +
   ggtitle("Resolution rate per state")
-
+  
 ```
 
 The state where the complaint was filed has a big impact on the chance to it be
@@ -398,39 +477,40 @@ resolved. The difference between the best resolution rate (in PB) and the worst
 ### Median interval to resolve an issue per state
 ```{r echo=FALSE, Plot_Two}
 
-state_resolved_elapsedays <- subset(state_resolved_elapsedays, (resolved == 'Y'))
 medianElapsedDaysResolved <- median(ds[resolved == 'Y', 'elapsedDays'])
 
+# sorting the states by the median elapsed days 
 state_ordered <- reorder(state_resolved_elapsedays$state, state_resolved_elapsedays$median)
 state_resolved_elapsedays$state <- factor(state_resolved_elapsedays$state, levels(state_ordered))
 
 breaks <- sort(c(medianElapsedDaysResolved, seq(0, 600, 150)))
 
-ggplot(state_resolved_elapsedays, aes(x=state, y=median)) +
-  geom_bar(stat="identity", fill = '#00BFC4') +
-  annotate("text", x = 2, y = medianElapsedDaysResolved +20, label = "Median") +
-  geom_hline(yintercept = medianElapsedDaysResolved, linetype="dashed") +
+ggplot(state_resolved_elapsedays, aes(x = state, y = median)) +
+  geom_bar(stat = "identity", fill = '#00BFC4') +
+  annotate("text", x = 2, y = medianElapsedDaysResolved + 20, label = "Median") +
+  geom_hline(yintercept = medianElapsedDaysResolved, linetype = "dashed") +
   scale_y_continuous(breaks = breaks) +
-  xlab('State') + 
+  xlab('State') +
   ylab('Days') +
   ggtitle("Median interval to resolve an issue per state") 
 ```
 
-Different states vary a lot the interval between the registration and close date.
-The chart above shows the median interval to resolve an issue (resolved = 'Y')
-per state.
+Different states vary a lot the median time to resolve an issue. Acre (AC) and 
+Distrito Federal (DF) have median time close to 600 days. While Rio de Janeiro (RJ)
+and Piaui (PI) have the median time of 20 and 30 days respectively.
 
 ### Plot Three
 ```{r echo=FALSE, Plot_Three, warning=FALSE}
 
 breaks = sort(c(24, 64, seq(100, 250, 50)))
 
-ggplot(ds, aes(x = elapsedDays)) +  
-  geom_density(aes(color = resolved), alpha=0.4) +
+ggplot(ds, aes(x = elapsedDays)) +
+  geom_density(aes(color = resolved), alpha = 0.4) +
   scale_x_continuous(limits = c(0, 250), breaks = breaks) +
-  geom_vline(xintercept=24, linetype="dashed") +
-  geom_vline(xintercept=64, linetype="dashed") +
-  xlab('Elapsed days between regisration and close date') + 
+  scale_color_discrete(name = 'Resolved', labels=c('No', 'Yes')) +
+  geom_vline(xintercept = 24, linetype = "dashed") +
+  geom_vline(xintercept = 64, linetype = "dashed") +
+  xlab('Elapsed days between regisration and close date') +
   ggtitle("Density curve of the elapsed days interval")
 ```
 
@@ -439,17 +519,8 @@ density of resolved issues, i.e. the resolution rate is greater,
 as can be observed in the table below:
 
 ```{r echo=FALSE, Plot_Three_Aux_Table, warning=FALSE}
-ds$elapsedDaysIntervals <- cut( ds$elapsedDays, 
-                                breaks = c(0, 25, 64, 10^4),
-                                include.lowest = TRUE)
 
-elapseDaysIntervals_resolved <- ds %>%
-  group_by(elapsedDaysIntervals, resolved) %>%
-  summarise (n = n()) %>%
-  mutate(freq = n / sum(n)) %>%
-  arrange(desc(resolved), elapsedDaysIntervals)
-
-kable(head(elapseDaysIntervals_resolved[elapseDaysIntervals_resolved$resolved == 'Y', c(1, 4)]))
+kable(elapseDaysIntervals_resolved[elapseDaysIntervals_resolved$resolved == 'Y', c(1, 4)])
 ```
 
 This information will help to build a predictive model in a future work.
@@ -465,8 +536,18 @@ the time it took to resolve an issue (almost 2 years).
 
 Ideas for the future:
 
-* Use data from other years to analyse trends in data.
+* Use data from other years to analyze trends in data.
 * Come up with an indicator of the quality of the Procon considering the resolution
 rate and the time it takes to resolve the issue.
 * Come up with an indicator for the companies.
 * Come up with a predictive model to give the probability of an issue be resolved.
+
+The worst data in the dataset was the name of the company because it came from
+user input and have a lot of typos. As the focus of the analysis was to compare 
+the performance of the states, this was not a big issue.
+
+A feature missing in the dataset is the address of the Procon where the issue
+was filed. This might help to identify the culprint for poor performance in the
+states.
+
+
